fixed misalignment in item browser header bar

--- a/views/admin/css/neatline-editor.css
+++ b/views/admin/css/neatline-editor.css
@@ -207,14 +207,15 @@ ul.filter-items {
 }
 
 .tabs > li > a {
-    padding: 0px 10px;
-    margin: 3px 0 0 0;
+    padding: 0 10px;
+    margin: 5px 0 0 0;
     color: #724e85;
     font-size: 0.9em;
     border-top: 1px solid #d2d2d2;
     border-left: 1px solid #d2d2d2;
     border-right: 1px solid #d2d2d2;
     background: #f5f5f5;
+    line-height: 33px;
 }
 
 .tabs > li > a:hover {
